--- a/src/components/Actividades/Actividades.css
+++ b/src/components/Actividades/Actividades.css
@@ -10,24 +10,46 @@
    
 }
 
-.caminata{
+.caminata {
     padding-left: 70px; 
-    
-}
-
-.iconos p{
-    
-    margin: 20px;
+    color: rgb(51, 51, 145);
 }
 
 .caminata2{
     padding-left: 70px;
+    
 }
 
-.linea{
+ .iconos {
     
-    
+    margin: 20px;
+    float: none;
+    margin-bottom: 50px;
+} 
+
+.iconos{
+    padding-left: 53px;
+    float: left;
+    font-size: 20px;
+   
 }
+
+
+.descripcion {
+    text-align:left;
+    padding-left: 70px;
+    color: rgb(51, 51, 145);
+}
+
+.caminata3{
+    padding-left: 70px;
+   
+}
+
+.caminata3 h3{
+    color: rgb(51, 51, 145);
+}
+
 
 .card{
     float:right;
@@ -35,11 +57,39 @@
 }
 
 .boton{
-
+    
     font-size: 20px;
-    height: 30px;
+    
 }
 
 .ubicacion{
     padding-left: 70px;
+    
+}
+
+.ubicacion h3{
+    color: rgb(51, 51, 145);
+}
+
+.botonacts {
+    background-color: rgb(51, 51, 145);
+}
+
+.card{
+    background-color: rgb(51, 51, 145);
+    text-align: center;
+    color:white;
+    height: 100%;
+}
+
+
+
+.linea{
+    margin-left: 70px;
+    margin-right: 300px;
+}
+
+.lineacami{
+    margin-left: 70px;
+    margin-right: 300px;  
 }
