--- a/src/components/Texto/Texto.css
+++ b/src/components/Texto/Texto.css
@@ -1,4 +1,4 @@
-.texto{
+/* .texto{
     justify-content: space-around;
     font-family: sans-serif;
     color: red;
@@ -12,4 +12,12 @@
     text-align: center;
     font-family: medium;
     font-style: normal;
+  } */
+
+  h6{
+   padding-left: 110px;
+  }
+
+  .bienvenidos{
+    padding-left: 91px
   }
