--- a/src/components/Actividades/Actividades.css
+++ b/src/components/Actividades/Actividades.css
@@ -75,7 +75,7 @@
     background-color: rgb(51, 51, 145);
 }
 
-.card{
+.card1{
     background-color: rgb(51, 51, 145);
     text-align: center;
     color:white;
