--- a/src/components/Turismo/Turismo.css
+++ b/src/components/Turismo/Turismo.css
@@ -1,4 +1,4 @@
-.CARD{
+.CARDFONDO{
     
     margin-right:800px ;
     border-radius: 30px 0px ;
@@ -7,14 +7,18 @@
     height: 100%;
 }
 
-.img{
+.img1{
     
     border-radius: 30px 0px 0px;
     height: 25%;
     width: 100%;
 }
 
-.img:hover{
+.imagenfondo{
+    width: 110%;
+     height: 310px
+}
+.img1:hover{
     transform : scale(1.1);
 }
 
@@ -72,4 +76,14 @@
     text-align: left;
     font-size: 20px;
 }
+
+/* .aventura{
+    background-image: url(./Imagenes/fondo.jpg);
+    background-color: red;
+    background-size: cover;
+} */
+/* .turismo{
+    background-color: red;
+} */
+
 
