--- a/src/components/Actividades/Actividades.css
+++ b/src/components/Actividades/Actividades.css
@@ -1,13 +1,23 @@
-.Actividades img{
-    width: 100%;
-    height: 555px;
+.Actividades{
+    flex-wrap: wrap;
+    
 }
 
-.iconos{
+.Actividades img{
+    width: 100%; 
+    height: 555px;
+    
+}
+
+/* .iconos{
     padding-left: 53px;
   
     font-size: 20px;
    
+} */
+
+.iconos2{
+    flex-wrap: wrap;
 }
 
 .caminata {
@@ -20,19 +30,26 @@
     
 }
 
- .iconos {
+  .iconos {
     
-    margin: 20px;
-    float: none;
-    margin-bottom: 50px;
-} 
+    margin: 10px;
+    float: left;
+  }
+.iconos2{
+    float: left;
+    margin: 10px;
+}
 
-.iconos{
+.iconos3{
+    float: left;
+    margin: 10px;
+} 
+ /* .iconos{
     padding-left: 53px;
     float: left;
     font-size: 20px;
-   
-}
+    
+} */
 
 
 .descripcion {
@@ -80,16 +97,50 @@
     text-align: center;
     color:white;
     height: 100%;
+    flex-wrap: wrap;
+    
 }
 
 
 
 .linea{
     margin-left: 70px;
-    margin-right: 300px;
+    margin-right: 400px;
 }
 
 .lineacami{
     margin-left: 70px;
-    margin-right: 300px;  
+    margin-right: 400px;  
 }
+
+.img img{
+    object-fit: cover;
+}
+
+.card__presios{
+    margin: 20px;
+    padding: -10px;
+}
+
+.info__container{
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: center; */
+    padding-left: 70px;
+}
+
+@media (max-width: 750px) {
+    .info__container{
+        flex-direction: column;
+    }
+}
+
+/* .informacion__travesia{
+    padding: 0px;
+    margin: 0px;
+}
+
+.card__presios{
+    margin-right: 540px;
+    
+} */
