--- a/src/components/Barrainferior/Barrainferior.css
+++ b/src/components/Barrainferior/Barrainferior.css
@@ -3,7 +3,7 @@
     padding: 50px;
   }
   
-  .barra2 p{
+  .barra__inferior p{
     margin: 15px;
     color: white;
     font-size: 20px;
@@ -17,4 +17,20 @@
     width: 20%;
     padding: 15px;
     
+  }
+
+  @media (max-width: 700px){
+    .barra img{
+      display: none;
+    }
+  }
+
+  @media (max-width: 700px){
+    .barra__inferior{
+        flex-wrap: wrap;
+        display: flex;
+        
+        
+        
+    }
   }
