--- a/src/components/Barrasuperior/Barrasuperior.css
+++ b/src/components/Barrasuperior/Barrasuperior.css
@@ -1,3 +1,9 @@
 .nav {
     margin-right: auto;
 }
+@media (max-width: 700px){
+.barra__superior{
+    display: flex;
+        flex-wrap: wrap;
+}
+}
