--- a/src/components/Confirmar/Confirmar.css
+++ b/src/components/Confirmar/Confirmar.css
@@ -1,3 +1,6 @@
+.confirmar{
+    
+}
 
 .linearoja{
     margin-left: 70px;
@@ -60,6 +63,11 @@
     color: rgb(51, 51, 145);
 }
 
+.formulariocompleto{
+    
+
+}
+
 .formularionombre{
     margin-left: 70px;
     color: rgb(51, 51, 145);
@@ -105,3 +113,11 @@
     color: rgb(51, 51, 145);
 }
 
+
+
+/* @media(min-width:768px){
+    .confirmar{
+        display: flex;
+
+    }
+} */
