--- a/src/components/Turismo/Turismo.css
+++ b/src/components/Turismo/Turismo.css
@@ -1,6 +1,6 @@
 .CARDFONDO{
     
-    margin-right:800px ;
+    margin-right:10px ;
     border-radius: 30px 0px ;
     background-color: white;
     width: 17%;
@@ -8,7 +8,7 @@
     
 }
 
-@media (max-width: 750px) {
+@media (max-width: 50px) {
     .CARDFONDO{
         flex-direction: column;
     }
@@ -22,7 +22,7 @@
 }
 
 .imagenfondo{
-    width: 110%;
+    width: 100%;
     height: 310.2px;
     object-fit: cover;
 }
@@ -53,7 +53,8 @@
 /* ----------aventura---------- */
 
 .CARDAVEN{
-    
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-right:800px ;
     border-radius: 30px 0px ;
     background-color: white;
@@ -64,7 +65,7 @@
 .imgaven{
     
     border-radius: 30px 0px 0px;
-    height: 25%;
+    height: 500px;
     width: 100%;
 }
 
